Fix alignment of text fields in modal

--- a/client/modules/treo-core/css/treo/treo-classic-theme.css
+++ b/client/modules/treo-core/css/treo/treo-classic-theme.css
@@ -10603,10 +10603,10 @@ main .record > .edit .cell:not([data-readonly]):not([data-mode=edit]) > .field:h
 
 .cell[data-mode=edit] > .field > input[type=checkbox]:not([disabled]),
 .cell[data-mode=edit] > .field > input[type=radio]:not([disabled]),
-.cell[data-mode=edit] > .field > .field,
+.cell[data-mode=edit] > .field > .field-value-container,
 .record > .edit .cell > .field > input[type=checkbox]:not([disabled]),
 .record > .edit .cell > .field > input[type=radio]:not([disabled]),
-.record > .edit .cell > .field > .field {
+.record > .edit .cell > .field > .field-value-container {
     margin: 0 10px;
     line-height: inherit;
 }
